# synth-nmr

./: .gitignore  .pre-commit-config.yaml  .zenodo.json  1D3Z_mr.str  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  TESTING_TODO.md  evaluate_debug.py  evaluate_debug2.py  evaluate_debug3.py  index.html  mkdocs.yml  mypy_errors.txt  objects.inv  publish.sh  pyproject.toml  requirements-dev.txt  requirements.txt  sitemap.xml  synth_nmr_source_guide.txt  test-error.txt  test_align.py  test_align2.py  test_fallback_raw.py  test_main.py  test_minimal.py  test_order.py  test_print.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yml  publish.yml  test.yml
api/: index.html
api/chemical_shifts/: index.html
api/data_pipeline/: index.html
api/j_coupling/: index.html
api/nef_io/: index.html
api/neural_shifts/: index.html
api/nmr/: index.html
api/rdc/: index.html
api/relaxation/: index.html
api/structure_utils/: index.html
api/trajectory/: index.html
api/validation/: index.html
bioconda_recipe/: meta.yaml
data/: bmr15844.str  bmr17769.str  bmr4057.str  bmr4375.str  bmr6457.str  bmr6488.str  bmr6497.str  bmr68.str  bmr7111.str  bmr7359.str
development/: index.html
development/architecture/: index.html
development/release_process/: index.html
development/testing/: index.html
docs/: getting_started.md  index.md
docs/api/: chemical_shifts.md  data_pipeline.md  index.md  j_coupling.md  nef_io.md  neural_shifts.md  nmr.md  rdc.md  relaxation.md  structure_utils.md  trajectory.md  validation.md
docs/development/: architecture.md  index.md  release_process.md  testing.md
docs/overrides/: main.html
docs/science/: chemical_shifts.md  index.md  j_couplings.md  noes.md  rdcs.md  relaxation.md  shiftx2.md  trajectory.md
docs/tutorials/: advanced_observables.ipynb  basic_nmr_prediction.ipynb  ensemble_nmr_analysis.ipynb  relaxation_analysis.ipynb
evaluation_results/: evaluate_shiftx2.py  walkthrough.md
examples/interactive_tutorials/: advanced_observables.ipynb  ensemble_nmr_analysis.ipynb  relaxation_analysis.ipynb
getting_started/: index.html
nonexistent/: bmr17769.str  bmr4057.str  bmr4375.str  bmr5387.str  bmr68.str  bmr7359.str
science/: index.html
science/chemical_shifts/: index.html
science/j_couplings/: index.html
science/noes/: index.html
science/rdcs/: index.html
science/relaxation/: index.html
science/shiftx2/: index.html
science/trajectory/: index.html
scripts/: benchmark_experimental.py  benchmark_j_couplings.py  benchmark_neural_vs_empirical.py  evaluate_shiftx2.py  train_neural_shifts.py
search/: search_index.json
synth_nmr/: __init__.py  chemical_shifts.py  coupling.py  data.py  data_pipeline.py  j_coupling.py  nef_io.py  neural_shifts.py  nmr.py  rdc.py  relaxation.py  structure_utils.py  synth_nmr_cli.py  trajectory.py  validation.py
synth_nmr/models/: neural_shifts_v1.pt
synth_nmr/scripts/: train_gnn.py
tests/: conftest.py  test_bmrb_validation.py  test_chemical_shift_physics.py  test_chemical_shift_validation.py  test_chemical_shifts.py  test_chemical_shifts_coverage.py  test_chemical_shifts_robustness.py  test_cli.py  test_cli_coverage.py  test_cli_extended.py  test_cli_validation.py  test_comment_density.py  test_coupling.py  test_coverage_gaps.py  test_data_pipeline_coverage.py  test_docs_integrity.py  test_final_coverage.py  test_integration.py  test_j_coupling.py  test_j_coupling_robust.py  test_montelione_validation.py  test_nef.py  test_nef_io.py  test_nef_parsing.py  test_neural_shifts.py  test_nmr.py  test_numba_fallback.py  test_rdc.py  test_rdc_robustness.py  test_relaxation.py  test_relaxation_physics.py  test_relaxation_robustness.py  test_scientific_benchmarks.py  test_shiftx2_config.py  test_structure_utils.py  test_train_pipeline.py  test_trajectory.py  test_trajectory_coverage.py  test_validation.py  test_validation_extended.py
tutorials/advanced_observables/: advanced_observables.ipynb  index.html
tutorials/basic_nmr_prediction/: basic_nmr_prediction.ipynb  index.html
tutorials/ensemble_nmr_analysis/: ensemble_nmr_analysis.ipynb  index.html
tutorials/relaxation_analysis/: index.html  relaxation_analysis.ipynb
