[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "synth-nmr"
version = "0.7.1"
description = "NMR spectroscopy calculations for protein structures"
authors = [{name = "George Elkins"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20,<2.0; python_version < '3.10'",
    "numpy>=1.20,<3.0; python_version >= '3.10'",
    "biotite>=0.35.0",
]
keywords = ["nmr", "spectroscopy", "protein", "structural biology", "computational chemistry"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
]

[project.optional-dependencies]
performance = ["numba>=0.55.0"]
trajectory = ["mdtraj>=1.9.0"]
ml = [
    "torch>=2.0.0",
    "torch-geometric>=2.3.0",
    "scikit-learn>=1.0.0",
]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.0",
    "black==24.8.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/elkins/synth-nmr"
Repository = "https://github.com/elkins/synth-nmr"
Documentation = "https://elkins.github.io/synth-nmr/"

[project.scripts]
synth-nmr-cli = "synth_nmr.synth_nmr_cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["synth_nmr*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "biotite.*",
    "numba.*",
    "torch.*",
    "torch_geometric.*",
    "sklearn.*",
    "scipy.*",
    "mdtraj.*"
]
ignore_missing_imports = true

