[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "synth-nmr"
version = "0.11.6"
description = "NMR spectroscopy calculations for protein structures"
authors = [{name = "George Elkins"}]
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
dependencies = [
    "synth-core",
    "numpy>=1.20",
    "biotite>=0.35.0",
]
keywords = ["nmr", "spectroscopy", "protein", "structural biology", "computational chemistry"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
]

[project.optional-dependencies]
performance = ["numba>=0.55.0"]
trajectory = ["mdtraj>=1.9.0"]
ml = [
    "torch>=2.0.0",
    "torch-geometric>=2.3.0",
    "scikit-learn>=1.0.0",
]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/elkins/synth-nmr"
Repository = "https://github.com/elkins/synth-nmr"
Documentation = "https://elkins-lab.github.io/synth-nmr/"

[project.scripts]
synth-nmr-cli = "synth_nmr.synth_nmr_cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["synth_nmr*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = [
    "ignore:pathlib.Path.__enter__.*:DeprecationWarning",
    "ignore:.*elements were guessed from atom name:UserWarning",
    "ignore:Calling nonzero on 0d arrays is deprecated.*:DeprecationWarning",
    "ignore:`torch_geometric.distributed` has been deprecated.*:DeprecationWarning",
    "ignore:`torch.jit.script` is deprecated.*:DeprecationWarning",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# formatting handled by ruff format (see [tool.ruff.format] above)

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
# Enable Pyflakes (F), Pycodestyle (E), isort (I), Bugbear (B), Pyupgrade (UP), Naming (N)
select = ["F", "E", "I", "B", "UP", "N", "PLE", "PLW", "PTH"]
ignore = [
    "E501",  # Line length handled by formatter
    "N806",  # Uppercase variables in functions (common for scientific constants Da, R)
    "N803",  # Uppercase arguments in functions
    "N802",  # Uppercase function names (common in tests for NMR constants)
    "B017",  # Asserting on Exception (common in generic error tests)
    "B904",  # Use raise from (too many to fix in this PR)
    "B006",  # Mutable default arguments (should be fixed, but out of scope for now)
    "PLW",   # Pylint warnings (global state, overwritten loop variables)
    "PTH",   # Use pathlib (out of scope for initial integration)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # re-exports are intentional
"tests/*" = ["N", "B"]   # naming/bugbear not enforced in tests

[tool.ruff.lint.isort]
known-first-party = ["synth_nmr"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
strict_equality = true
exclude = ["build/", "dist/", "scratch/", "site/"]

[[tool.mypy.overrides]]
module = ["tests.*", "scripts.*", "examples.*", "scratch.*"]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "biotite.*",
    "numba.*",
    "numpy.*",
    "torch.*",
    "torch_geometric.*",
    "sklearn.*",
    "scipy.*",
    "mdtraj.*",
]
ignore_missing_imports = true

# pyright config removed — mypy is the primary type checker for this project
